[package]
name = "floppy-corgi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.0"
bevy_asset_loader = { version = "0.12.1", features = ["2d"] }
bevy_kira_audio = "0.12.0"
bevy_rapier2d = "0.16.1"
noise = "0.7.0"

[profile.dev.package.bevy_rapier2d]
opt-level = 3
